<resources>
    <string name="app_name">NBA Score Board</string>
    <string name="team_a">Team A</string>
    <string name="plus_3_points">+3 POINTS</string>
    <string name="plus_2_points">+2 POINTS</string>
    <string name="free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="email">Email Result</string>
</resources>
