<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/teamNameStyle"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/teamScoreStyle" />

            <Button
                style="@style/scoreBtnStyle"
                android:onClick="score3Point"
                android:tag="A"
                android:text="@string/plus_3_points" />

            <Button
                style="@style/scoreBtnStyle"
                android:onClick="score2Point"
                android:tag="A"
                android:text="@string/plus_2_points" />

            <Button
                style="@style/scoreBtnStyle"
                android:onClick="scoreFreeThrow"
                android:tag="A"
                android:text="@string/free_throw" />
        </LinearLayout>

        <View style="@style/breakLineStyle" />

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/teamNameStyle"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/teamScoreStyle" />

            <Button
                style="@style/scoreBtnStyle"
                android:onClick="score3Point"
                android:tag="B"
                android:text="@string/plus_3_points" />

            <Button
                style="@style/scoreBtnStyle"
                android:onClick="score2Point"
                android:tag="B"
                android:text="@string/plus_2_points" />

            <Button
                style="@style/scoreBtnStyle"
                android:onClick="scoreFreeThrow"
                android:tag="B"
                android:text="@string/free_throw" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        style="@style/functionBtnStyle"
        android:layout_alignParentBottom="true"
        android:onClick="reset"
        android:text="@string/reset" />

    <Button
        style="@style/functionBtnStyle"
        android:layout_above="@id/reset_btn"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="emailResult"
        android:text="@string/email" />
</RelativeLayout>
